tests/ui/unwind-abis/feature-gate-thiscall-unwind.stderr
error[E0658]: thiscall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-thiscall-unwind.rs:13:8
   |
LL | extern "thiscall-unwind" fn fu() {}
   |        ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-thiscall-unwind.rs:14:8
   |
LL | extern "thiscall" fn f() {}
   |        ^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-thiscall-unwind.rs:17:12
   |
LL |     extern "thiscall" fn m();
   |            ^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-thiscall-unwind.rs:18:12
   |
LL |     extern "thiscall-unwind" fn mu();
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-thiscall-unwind.rs:20:12
   |
LL |     extern "thiscall" fn dm() {}
   |            ^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-thiscall-unwind.rs:21:12
   |
LL |     extern "thiscall-unwind" fn dmu() {}
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-thiscall-unwind.rs:26:12
   |
LL |     extern "thiscall" fn m() {}
   |            ^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-thiscall-unwind.rs:27:12
   |
LL |     extern "thiscall-unwind" fn mu() {}
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-thiscall-unwind.rs:31:12
   |
LL |     extern "thiscall" fn im() {}
   |            ^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-thiscall-unwind.rs:32:12
   |
LL |     extern "thiscall-unwind" fn imu() {}
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-thiscall-unwind.rs:35:18
   |
LL | type TA = extern "thiscall" fn();
   |                  ^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-thiscall-unwind.rs:36:19
   |
LL | type TAU = extern "thiscall-unwind" fn();
   |                   ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-thiscall-unwind.rs:38:8
   |
LL | extern "thiscall" {}
   |        ^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-thiscall-unwind.rs:39:8
   |
LL | extern "thiscall-unwind" {}
   |        ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error: aborting due to 14 previous errors

For more information about this error, try `rustc --explain E0658`.
